feat: add sds sync service/api, using eventbus